activate jacoco and findbugs reporting

--- a/modules/ota-webapp/pom.xml
+++ b/modules/ota-webapp/pom.xml
@@ -53,6 +53,12 @@
 	
     <build>
 		<finalName>ota-service</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
 	</build>
 
 
