--- a/modules/ota-webapp/pom.xml
+++ b/modules/ota-webapp/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.sap.prd.mobile.ios.ota</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0.6</version>
+		<version>1.0.7-SNAPSHOT</version>
 		<relativePath>../../parent</relativePath>
 	</parent>
 
